--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
     }
+    body {
+      font-size: 100%;
+      line-height: 1;
+    }
     .container {
       overflow: auto;
       width: 80%;
@@ -48,6 +52,7 @@
   </style>
   
   <script src="/bower_components/jquery/dist/jquery.min.js"></script>
+  <script src="/bower_components/imagesloaded/imagesloaded.pkgd.min.js"></script>
   <script src="/dist/jquery.bs_imagify.min.js"></script>
 </head>
 <body>
@@ -57,7 +62,7 @@
       <div class="thumbnail-wrapper">
         <div class="thumbnail">
           <a class="image-wrapper" href="#">
-            <img src="http://placehold.it/400x600">
+            <img src="http://placehold.it/500x700">
           </a>
           <div class="caption">
             <h3>Product Title</h3>
@@ -68,7 +73,7 @@
       <div class="thumbnail-wrapper">
         <div class="thumbnail">
           <a class="image-wrapper" href="#">
-            <img src="http://placehold.it/400x600">
+            <img src="http://placehold.it/200x300">
           </a>
           <div class="caption">
             <h3>Product Title</h3>
@@ -79,7 +84,7 @@
       <div class="thumbnail-wrapper">
         <div class="thumbnail">
           <a class="image-wrapper" href="#">
-            <img src="http://placehold.it/400x600">
+            <img src="http://placehold.it/700x500">
           </a>
           <div class="caption">
             <h3>Product Title</h3>
@@ -90,7 +95,7 @@
       <div class="thumbnail-wrapper">
         <div class="thumbnail">
           <a class="image-wrapper" href="#">
-            <img src="http://placehold.it/400x600">
+            <img src="http://placehold.it/300x200">
           </a>
           <div class="caption">
             <h3>Product Title</h3>
@@ -100,5 +105,12 @@
       
     </section>
   </div>
+  
+  <script>
+    $('.image-wrapper').bs_imagify({
+      ratio: '4:6',
+      fit: 'scale'
+    });
+  </script>
 </body>
 </html>
