--- a/index.html
+++ b/index.html
@@ -108,8 +108,9 @@
   
   <script>
     $('.image-wrapper').bs_imagify({
-      ratio: '4:6',
-      fit: 'scale'
+      //ratio: '6:4',
+      //fit: 'scale',
+      //align: 'bottom'
     });
   </script>
 </body>
