--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta content="width=device-width, initial-scale=1" name="viewport">
-  <title>BS Imagify</title>
+  <title>Uniform Thumbnails Demo</title>
   
   <style>
     * {
@@ -52,8 +52,7 @@
   </style>
   
   <script src="/bower_components/jquery/dist/jquery.min.js"></script>
-  <script src="/bower_components/imagesloaded/imagesloaded.pkgd.min.js"></script>
-  <script src="/dist/jquery.bs_imagify.min.js"></script>
+  <script src="/dist/jquery.uniform_thumbnails.min.js"></script>
 </head>
 <body>
   <div class="container">
@@ -107,8 +106,8 @@
   </div>
   
   <script>
-    $('.image-wrapper').bs_imagify({
-      //ratio: '6:4',
+    $('.image-wrapper').uniform_thumbnails({
+      //ratio: '4:6',
       //fit: 'scale',
       //align: 'bottom'
     });
