--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
     }
     .image-wrapper {
       display: block;
-      overflow: hidden;
       margin-bottom: 1.5em;
+      border: red solid 1px;
     }
     img {
       max-width: 100%;
@@ -94,7 +94,7 @@
       <div class="thumbnail-wrapper">
         <div class="thumbnail">
           <a class="image-wrapper" href="#">
-            <img src="http://placehold.it/300x200">
+            <!-- <img src="http://placehold.it/300x200"> -->
           </a>
           <div class="caption">
             <h3>Product Title</h3>
@@ -105,7 +105,7 @@
     </section>
   </div>
   
-  <script>
+  <script>  
     $('.image-wrapper').uniform_thumbnails({
       //ratio: '4:6',
       //fit: 'scale',
