--- a/index.html
+++ b/index.html
@@ -110,6 +110,9 @@
       //ratio: '4:6',
       //fit: 'scale',
       //align: 'bottom'
+      callback: function(){
+        console.log('All done!');
+      }
     });
   </script>
 </body>
