--- a/index.html
+++ b/index.html
@@ -110,9 +110,8 @@
       //ratio: '4:6',
       //fit: 'scale',
       //align: 'bottom'
-      callback: function(){
-        console.log('All done!');
-      }
+    }).on('ut_complete', function(){
+      console.log('All done!');
     });
   </script>
 </body>
