move demo styles into folder

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <title>Uniform Thumbnails Demo</title>
 
-  <link rel="stylesheet" href="style.css">
-  <script src="/bower_components/jquery/dist/jquery.min.js"></script>
+  <link rel="stylesheet" href="demo/style.css">
+  <script src="bower_components/jquery/dist/jquery.min.js"></script>
+  <script src="dist/jquery.uniform_thumbnails.min.js"></script>
 </head>
 <body>
   <div class="container">
@@ -419,8 +420,6 @@
 -->
   </div>
   
-  
-  <script src="/dist/jquery.uniform_thumbnails.min.js"></script>
   <script>  
     $('.cropped-square .image-wrapper').uniform_thumbnails();
     
