use ratio to determine image fitting

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <title>Uniform Thumbnails Demo</title>
 
   <link rel="stylesheet" href="demo/style.css">
-  <script src="bower_components/jquery/dist/jquery.min.js"></script>
+  <!--[if lt IE 9]><script src="//code.jquery.com/jquery-1.11.1.min.js"></script><![endif]-->
+  <!--[if (gt IE 9)|!(IE)]><!--><script src="bower_components/jquery/dist/jquery.min.js"></script><!--<![endif]-->
   <script src="dist/jquery.uniform_thumbnails.min.js"></script>
 </head>
 <body>
